--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@
 
 #clock {
     font-size: 175px;
-    width: 900px;
+    width: 950px;
     margin: 200px;
     text-align: center;
-    background-color: #c9c6c6;
+    background-color: #000000;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
+    color: white;
 }
