--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
+/* *{
     background-color: #000000;
-}
+} */
 
 #clock {
     font-family: 'Courier New', Courier, monospace;
@@ -8,8 +8,20 @@
     width: 950px;
     margin: 200px;
     text-align: center;
-    background-color: #000000;
-    border: 2px solid rgb(0, 0, 0);
+    /* background-color: #ffffff; */
+    /* border: 2px solid rgb(255, 244, 244); */
     border-radius: 20px;
-    color: white;
+    /* color: rgb(0, 0, 0); */
 }
+
+
+.dark{
+    color: white;
+    background-color: rgb(0, 0, 0);
+  }
+  
+  .light{
+    background-color: rgb(255, 255, 255);
+    color: black;
+  }
+  
