--- a/style.css
+++ b/style.css
@@ -1,27 +1,18 @@
-/* *{
-    background-color: #000000;
-} */
-
+ 
 #clock {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 175px;
-    width: 950px;
-    margin: 200px;
-    text-align: center;
-    /* background-color: #ffffff; */
-    /* border: 2px solid rgb(255, 244, 244); */
-    border-radius: 20px;
-    /* color: rgb(0, 0, 0); */
+  font-family: "Courier New", Courier, monospace;
+  font-size: 175px;
+  width: 950px;
+  margin: 150px;
+  text-align: center;
 }
 
+.dark {
+  color: white;
+  background-color: rgb(0, 0, 0);
+}
 
-.dark{
-    color: white;
-    background-color: rgb(0, 0, 0);
-  }
-  
-  .light{
-    background-color: rgb(255, 255, 255);
-    color: black;
-  }
-  
+.light {
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
