--- a/style.css
+++ b/style.css
@@ -1,19 +1,35 @@
- 
+body {
+  margin: 0;
+  padding: 0;
+  transition: background-color 0.3s, color 0.3s;
+}
+
 #clock {
   font-family: "Courier New", Courier, monospace;
   font-size: 175px;
-  width: 950px;
-  margin: 150px;
+  width: 100%;
+  margin-top: 150px;
   text-align: center;
-  justify-content: center;
+}
+
+#date {
+  text-align: center;
+  font-size: 40px;
+  font-family: "Courier New", Courier, monospace;
+  margin-top: 100px;
+  color: inherit; /* Adapts with light/dark */
 }
 
 .dark {
+  background-color: black;
   color: white;
-  background-color: rgb(0, 0, 0);
 }
 
 .light {
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   color: black;
+}
+
+#mode {
+  cursor: pointer;
 }
